# MEta_ai

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  build.bat  env_wrapper.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_env.py  test_llm.py  test_output.txt
agents/: DummyAgent.cpp
env/: Action.h  NegotiationEnv.cpp  NegotiationEnv.h  State.h
opponent/: Opponent.cpp  Opponent.h  OpponentStrategy.h
server/: app.py
tests/: experiment.cpp  run_experiments.py  simulation.cpp
