[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "negotiation-env"
version = "1.0.0"
description = "Strategic Negotiation Simulation — OpenEnv environment where AI agents learn to negotiate under uncertainty"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Team MEta_ai"},
]

dependencies = [
    "openenv-core",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
server = "server.app:main"
